# lambdalib

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-tests.yml
examples/: crg.py  i2c_bridge.py  i2c_bridge_soft.py  i2c_reginit.py  spi_bridge.py  spi_bridge_soft.py
lambdalib/cores/: ila.py  regs.py  serial.py
lambdalib/cores/filter/: iir.py
lambdalib/cores/float/: clz.py  i2f.py
lambdalib/cores/i2c/: i2c.py  init.py  proto.py  stream.py  tca9548a.py
lambdalib/cores/lcd/: ssd1306.py
lambdalib/cores/led/: blink.py  ws2812b.py
lambdalib/cores/math/: multiplier.py
lambdalib/cores/mech/: endless_potentiometer.py
lambdalib/cores/mem/: stream.py
lambdalib/cores/opto/: tof.py
lambdalib/cores/spi/: bridge.py  clkgen.py  common.py  master.py  slave.py  stream.py
lambdalib/cores/time/: clk.py  timer.py
lambdalib/cores/usb/: __init__.py  endpoint_cdc.py  generic_device.py  ulpi.py  utmi.py
lambdalib/interface/: stream.py  stream_sim.py  stream_utils.py
lambdalib/litex/cores/: regs.py
lambdalib/software/: ila.py  utils.py
lambdalib/software/i2c/: bus.py
lambdalib/software/usb/: device.py
lambdalib/tests/: test_cores_endless_potentiometer.py  test_cores_i2c.py  test_cores_regs.py  test_cores_spi.py  test_cores_time.py  test_interface_stream.py
