[project]
name = "lambdalib"
version = "0.1.0"
description = "Lambdalib is a collection of lib/tools for amaranth-hdl"
authors = [
    {name = "Pierre-Olivier Vauboin", email = "po@lambdaconcept.com"},
]
dependencies = [
    "luna-usb @ git+https://github.com/greatscottgadgets/luna.git",
    "amaranth >= 0.4, < 0.5",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio@8ebce9bc535f96a0f479a53f1fa000bff71aceb8",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards.git",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc@7b52e9351b1f74a8e727d12f3a91469796aaa0ad",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.dev-dependencies]
test = [
    "pdm[pytest]",
    "pytest-cov",
    "lambdasoc @ git+https://github.com/lambdaconcept/lambdasoc",
    "minerva @ git+https://github.com/minerva-cpu/minerva",
    "setuptools",
]